# MiraiBot

./: Analysis.py  Features.py  Main.py  Proce.py  README.md  Start  pyproject.toml
MCL/: config.json  device.json
MCL/config/Console/: AutoLogin.yml
MCL/config/net.mamoe.mirai-api-http/: setting.yml
MCL/libs/: mirai-console-2.0-M2-1-dev-1.sha1  mirai-core-all-2.0-M2-2.sha1  mirai-core-all-2.0.0.sha1
MCL/plugins/: mirai-api-http-1.9.8.metadata  mirai-api-http-1.9.8.sha1
MiraiOK/: device.json
MiraiOK/config/Console/: AutoLogin.yml
MiraiOK/config/MiraiApiHttp/: setting.yml
src/: Main.py
src/MiraiBot/: Clean.py  Handler.py  Main.py
src/MiraiBot/Features/: Image.py  Ping.py  __init__.py
test/: Clean.py  Features.py  Test.py  layout.py  paper.py
